samples/_failures_safe/1761246363_231433_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_742aa5c4.c: In function ‘main’:
./samples/SAFE/__tmp_742aa5c4.c:142:5: error: expected expression at end of input
  142 |     if (
      |     ^~
./samples/SAFE/__tmp_742aa5c4.c:142:5: error: expected declaration or statement at end of input
